# qt-multithread

./: CMakeLists.txt  Controller.cpp  Controller.hpp  FactorialWorker.cpp  FactorialWorker.hpp  PrimeNumberWorker.cpp  PrimeNumberWorker.hpp  README.md  Worker.cpp  Worker.hpp  main.cpp  mainwindow.cpp  mainwindow.h
include/qt_multithread/: Controller.hpp  FactorialWorker.hpp  PrimeNumberWorker.hpp  Worker.hpp
source/qt_multithread/: Controller.cpp  FactorialWorker.cpp  PrimeNumberWorker.cpp  Worker.cpp
